<resources>
    <string name="app_name">Inventory Application</string>
    <string name="add_item">Add Item</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="new_user">New User</string>
    <string name="delete_item">Delete Item</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="enter_item_qty">Enter item quantity</string>
    <string name="update_item">Update Item</string>

</resources>